<resources>
    <string name="app_name">Balloon</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="facebook_app_id">263178530806258</string>
    <string name="fb_login_protocol_scheme">fb263178530806258</string>
    <string name="emailpassword_title_text">Login to see others Result</string>
    <string name="signed_out">sign_out</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Log In</string>
    <string name="create_account">Register</string>
    <string name="sign_out">Sign_ount</string>
    <string name="verify_email">Verify e - mail</string>
    <string name="auth_failed">Authorization Failed !!!!!</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="all_scores">The All Users Best Scores</string>
    <string name="oops_no_internet_connection">ooOOPS!!! No Internet Connection</string>
    <string name="all_players_best_results_and_mine">All players best results with mine</string>
    <string name="play_again">Play again</string>
    <string name="clear_all_history">Clear all history</string>
    <string name="game_over">Game Over</string>
    <string name="move_me">Move me</string>
    <string name="play">Play</string>
    <string name="what_is_your_name">What is your name ?</string>
    <string name="name">Name - </string>
    <string name="score">Score - </string>
    <string name="something_wemt_wrong">Something Went Wrong !!!</string>
    <string name="required">Required.</string>
    <string name="verification_email_sent_to">Verification email sent to </string>
    <string name="failed_to_send_verification_email">Failed to send verification email.</string>
    <string name="go_to_settings">Go To Settings</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="do_you_want_to_clear_all_history_list"> do you want to clear all history list ?</string>
    <string name="do_you_want_to_delete_this_score"> do you want to delete this score ?</string>
    <string name="delete_item">Delete Item</string>
    <string name="gamer_name_can_not_be_empty">Gamer name can not be empty!</string>
</resources>
