<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_start_acivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/background_layout"/>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"/>
    <com.google.android.gms.ads.AdView
        android:id="@+id/secondAd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"/>

    <Button
        android:id="@+id/playButton"
        android:layout_width="@dimen/new_game_button_width"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/fourth_gradient"
        android:onClick="playGameClick"
        android:text="@string/play"
        android:textSize="@dimen/alert_text_size"
        android:gravity="center"/>

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="@dimen/new_game_button_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/what_is_your_name"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/edit_text_background"
        android:gravity="center"
        android:maxLines="1"
        android:singleLine="true"
        android:padding="5dp"
        android:textColor="@color/play_again_background"
        android:textSize="@dimen/big_text_size" />
</RelativeLayout>
